--- a/package.json
+++ b/package.json
@@ -19,8 +19,16 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
     "gh-pages": "^2.0.1",
+    "husky": "^1.3.1",
     "prettier": "^1.16.4"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "repository": {
     "type": "git",
