--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "gatsby": "^2.3.5",
+    "gatsby-image": "^2.0.39",
+    "gatsby-plugin-sharp": "^2.0.34",
+    "gatsby-source-filesystem": "^2.0.29",
+    "gatsby-transformer-sharp": "^2.1.18",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
